<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_addThread"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_addThread"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_refresh_id"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/action_refresh_id"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message_alarm"
        android:icon="@drawable/ic_notifications_none_white_24dp"
        android:title="@string/action_message_alarm"
        android:checkable="true"
        />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_white_24dp"
        android:title="@string/action_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_id"
        android:title="@string/view_id"
        app:showAsAction="never" />
</menu>