<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="dk.alroe.apps.octopub.AttachmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Attach..." />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_photo_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/button_take_photo"
                android:src="@drawable/ic_photo_camera_black_72dp" />

            <ImageButton
                android:id="@+id/button_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/button_select_image"
                android:src="@drawable/ic_photo_black_72dp" />

            <ImageButton
                android:id="@+id/button_video_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/button_record_video"
                android:src="@drawable/ic_videocam_black_72dp" />

            <ImageButton
                android:id="@+id/button_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/button_select_video"
                android:src="@drawable/ic_movie_black_72dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_audio_record"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/button_record_audio"
                android:src="@drawable/ic_mic_black_72dp" />

            <ImageButton
                android:id="@+id/button_audio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:contentDescription="@string/button_select_audio"
                android:src="@drawable/ic_music_note_black_72dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
